fixed point counter; fixed scrollbars appearing at start of round

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
+* { margin:0; padding:0; } /* to remove the top and left whitespace */
+
 html, body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #countdown, #score {
@@ -15,4 +21,5 @@ html, body {
     position: absolute;
     left: 0;
     top: 0;
+    display: block;
 }
